Refactor item registration and initialization logic; remove unused pink garnet descriptions

--- a/src/main/resources/assets/emberborn/lang/en_us.json
+++ b/src/main/resources/assets/emberborn/lang/en_us.json
@@ -1,5 +1,3 @@
 {
-  "item.emberborn.pink_garnet": "Pink Garnet",
-  "item.emberborn.pink_garnet.description": "A rare gem with a soft pink hue, known for its calming properties.",
-  "item.emberborn.pink_garnet.tooltip": "A gem that radiates a gentle warmth, often used in jewelry and talismans."
+  "item.emberborn.pink_garnet": "Pink Garnet"
 }
