Rename pink garnet to brass ingot and add new ingot items: bronze, copper, iron, pewter, steel, tin, and zinc

--- a/src/main/resources/assets/emberborn/lang/en_us.json
+++ b/src/main/resources/assets/emberborn/lang/en_us.json
@@ -1,3 +1,10 @@
 {
-  "item.emberborn.pink_garnet": "Pink Garnet"
+  "item.emberborn.pewter_ingot": "Pewter Ingot",
+  "item.emberborn.tin_ingot": "Tin Ingot",
+  "item.emberborn.bronze_ingot": "Bronze Ingot",
+  "item.emberborn.copper_ingot": "Copper Ingot",
+  "item.emberborn.zinc_ingot": "Zinc Ingot",
+  "item.emberborn.brass_ingot": "Brass Ingot",
+  "item.emberborn.iron_ingot": "Iron Ingot",
+  "item.emberborn.steel_ingot": "Steel Ingot"
 }
