Add brass vial item and recipe; update model references

--- a/src/main/resources/assets/emberborn/lang/en_us.json
+++ b/src/main/resources/assets/emberborn/lang/en_us.json
@@ -20,6 +20,6 @@
   "item.emberborn.iron_ore": "Iron Ore",
   "item.emberborn.tin_ore": "Tin Ore",
   "item.emberborn.zinc_ore": "Zinc Ore",
-  "item.emberborn.brass_vile": "Brass Vile",
-  "item.emberborn.tin_vile": "Tin Vile"
+  "item.emberborn.brass_vial": "Brass Vial",
+  "item.emberborn.tin_vial": "Tin Vial"
 }
